fix products index spacing issues

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,23 +1,23 @@
-.medium {
+.box {
   width: 355px;
   background-color: #fff;
 }
-
-.small {
-  width: 196px;
-  padding: 5px;
-  background-color: #fff;
-}
-
-.image_panel {
-  display: inline-block;
-}
-
-.product_show_panel {
-  background-color: #fff;
-}
-
-.product-stock {
-  font-style: italic;
-  color: orange;
-}
+//
+// .small {
+//   width: 196px;
+//   padding: 5px;
+//   background-color: #fff;
+// }
+//
+// .image_panel {
+//   display: inline-block;
+// }
+//
+// .product_show_panel {
+//   background-color: #fff;
+// }
+//
+// .product-stock {
+//   font-style: italic;
+//   color: orange;
+// }
